@@ -30,7 +30,7 @@ General Public License for more details.
 @finalout
 @titlepage
 @title Epkg User Manual
-@subtitle for version 3.0.0 (v3.0.0-19-g54d7bb0+1)
+@subtitle for version 3.0.0 (v3.0.0-22-gd08a4d0+1)
 @author Jonas Bernoulli
 @page
 @vskip 0pt plus 1filll
@@ -47,7 +47,7 @@ With Epkg you can browse the Emacsmirror package database using an
 interface similar to that of @code{package.el}.
 
 @noindent
-This manual is for Epkg version 3.0.0 (v3.0.0-19-g54d7bb0+1).
+This manual is for Epkg version 3.0.0 (v3.0.0-22-gd08a4d0+1).
 
 @quotation
 Copyright (C) 2016-2017 Jonas Bernoulli <jonas@@bernoul.li>
@@ -178,16 +178,13 @@ Epkg provides several commands for listing packages.
 In the buffer which lists packages, typing @code{RET} displays information
 about the package at point in another buffer.
 
-@defopt epkg-list-packages-omit-shelved
+@defopt epkg-list-exclude-types
 
-This option controls whether commands that list Epkg packages omit
-shelved packages.  By default that is the case.
-
-Shelved packages are those that are no longer updated, and which are
-available from the Emacsattic instead of the Emacsmirror.
-
-The command @code{epkg-list-packages-of-type} is not affected by this
-option, and neither is @code{epkg-describe-package}.
+The value of this option is a list of package types.  Most commands
+that list packages exclude any package whose type matches one of the
+types listed here.  The command @code{epkg-list-packages-of-type} does not
+respect this option, and you can tell the other commands to ignore
+it as well by using a prefix argument.
 @end defopt
 
 @defopt epkg-list-columns
